--- a/drs/package.json
+++ b/drs/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^6.18.0",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-router": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
