--- a/drs/netlify.toml
+++ b/drs/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "drs"             
   command = "npm run build"
-  publish = "drs/.next"   
+  publish = ".next"   
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
