--- a/drs/netlify.toml
+++ b/drs/netlify.toml
@@ -1,5 +1,7 @@
 [build]
-  publish = "dist"   
+  base = "drs"             
+  command = "npm run build"
+  publish = ".next"   
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
